gtk+3.0 (3.22.29-2) UNRELEASED; urgency=medium

  * Refresh patch series through gbp-pq
    - Harvest date and authorship information from debian/changelog

 -- Simon McVittie <smcv@debian.org>  Wed, 21 Mar 2018 10:32:43 +0000

gtk+3.0 (3.22.29-1) unstable; urgency=medium

  * New upstream release
    - Reverts confusing single-click open behavior in file chooser
      (Closes: #824606)
  * debian/libgtk-3-0.symbols: Add new symbols

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 15 Mar 2018 07:42:30 -0400

gtk+3.0 (3.22.28-1) unstable; urgency=medium

  * New upstream release (LP: #1698270) (LP: #1714518)
  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.3
  * Update Vcs fields for migration to https://salsa.debian.org/
  * Drop git_text-view-support-emoji-chooser.patch: Applied in new release

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 15 Feb 2018 05:23:44 -0500

gtk+3.0 (3.22.26-2) unstable; urgency=medium

  [ Simon McVittie ]
  * Set Rules-Requires-Root to no
  * Add a Lintian override to silence warnings about the non-standard
    name of libgail-3-0, which should really have been libgailutil-3-0
    but isn't going to be changed now

  [ Jeremy Bicha ]
  * Add git_text-view-support-emoji-chooser.patch:
    - Offer right-click "Insert Emoji" menu item for GtkTextView too

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 28 Nov 2017 17:16:13 -0500

gtk+3.0 (3.22.26-1) unstable; urgency=medium

  [ Simon McVittie ]
  * Move examples, udebs from Priority: extra to optional

  [ Michael Biebl ]
  * New upstream release
  * Rebase patches
  * Update symbols file for libgtk-3-0
  * Bump Standards-Version to 4.1.1
  * Drop no longer needed Breaks/Replaces
  * Add (versioned) Provides to gir1.2-gtk-3.0 to follow the latest changes in
    the GObject introspection policy wrt bundled typelibs.

 -- Michael Biebl <biebl@debian.org>  Mon, 13 Nov 2017 00:54:47 +0100

gtk+3.0 (3.22.25-1) unstable; urgency=medium

  * Team upload