@@ -2,6 +2,7 @@ gtk+3.0 (3.22.29-2) UNRELEASED; urgency=medium
 
   * Refresh patch series through gbp-pq
     - Harvest date and authorship information from debian/changelog
+  * Add more upstream status information to the patch series
 
  -- Simon McVittie <smcv@debian.org>  Wed, 21 Mar 2018 10:32:43 +0000
 
